--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "json-server": "^0.16.1",
     "next": "9.4.4",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "sqlite": "^4.0.11",
+    "sqlite3": "^4.2.0"
   },
   "devDependencies": {
     "@types/node": "^14.0.13",
