--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "mock-server": "json-server --watch ./db.json -p 4001 -d 3000"
   },
   "dependencies": {
+    "@material-ui/core": "^4.10.2",
     "json-server": "^0.16.1",
     "next": "9.4.4",
     "react": "16.13.1",
